--- a/Number_Guessing_Game.ipynb
+++ b/Number_Guessing_Game.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPUSNQUu2XDsEePl7qQNTPd",
+      "authorship_tag": "ABX9TyPZhpIdjBVuM5WModFyXEAb",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,6 +34,7 @@
       },
       "outputs": [],
       "source": [
+        "!pip install art\n",
         "from random import randint\n",
         "from art import text2art\n",
         "\n",
